--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-flask==2.3.3
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-gunicorn==21.2.0
+flask>=2.3.0
+pandas>=2.0.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+gunicorn>=20.0.0
+setuptools>=65.0.0
+wheel>=0.40.0
